# brain

./: .clinerules  Cargo.toml  DESIGN.md  PKGBUILD  README.md  brain-search.el
mcp/server/: Cargo.toml
mcp/server/src/: config.rs  main.rs  search.rs
src/: config.rs  content.rs  main.rs  ollama.rs
