[package]
name = "brain-knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
regex = "1.10"
rayon = "1.8"
dirs = "5.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ollama-rs = "0.1"

[dev-dependencies]
tempfile = "3.8"
