[package]
name = "brain-knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
walkdir = "2.5.0"
regex = "1.11.1"
rayon = "1.10.0"
dirs = "6.0.0"
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
ollama-rs = "0.2.6"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.19.1"
